# ELO329-Tarea3

./: Equipo.cpp  README.md  Stage1.cpp  Stage1.h  cellular.cpp  equipo.h  main.cpp  readme.txt
Stage1/: .gitignore  CMakeLists.txt  Stage1.cpp  cellular.h  cellularview.cpp
Stage2/: CMakeLists.txt  Stage2.cpp  Stage2.h  cellularview.h  main.cpp  tabletview.cpp  tabletview.h
Stage3/: CMakeLists.txt  Stage3.cpp  Stage3.h  cellularview.cpp  cellularview.h  eloteltag.cpp  eloteltagview.cpp  equipo.cpp  etnube.cpp  main.cpp  tablet.h
Stage4/: CMakeLists.txt  Stage4.cpp  Stage4.h  cellularview.cpp  cellularview.h  eloteltag.h  eloteltagview.h  equipo.h  etnube.cpp  etnube.h  findmydialog.cpp  findmydialog.h  gfindmydialog.cpp  gfindmydialog.h  main.cpp  tablet.cpp  tabletview.cpp  tabletview.h
